<resources>
    <string name="app_name">GateGo</string>
    <string name="title_activity_maps">Map</string>
    <string name="save">Save</string>
    <string name="airport">Airport</string>
    <string name="start_gate">Start gate...</string>
    <string name="destination_gate">Destination gate...</string>
    <string name="route_time">6 min</string>
    <plurals name="date_format">
        <item quantity="one">TODAY-%s</item>
        <item quantity="two">TOMORROW-%s</item>
        <item quantity="other">%s</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restrooms">Restrooms</string>
    <string name="restaurants">Restaurants</string>
    <string name="coffee">Coffee</string>
    <string name="shopping">Shopping</string>
    <string name="nearby_title">Show nearby...</string>
    <string name="next">next</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_password">Invalid password</string>
    <string name="field_required">Field required</string>
    <string name="invalid_email">Invalid email</string>

</resources>
