<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.rosehulman.ciepieab.gatego.NearbyFragment"
    android:background="@drawable/rounded_corners"
    android:paddingLeft="15dp"
    android:paddingRight="20dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="@string/nearby_title" />-->

        <CheckBox
            android:id="@+id/restroom_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restrooms"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:id="@+id/restaurant_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurants"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:id="@+id/coffee_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:id="@+id/shopping_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
